<resources>
    <string name="app_name">Calculator</string>

    <string name="ac">AC</string>
    <string name="del">BACK</string>
    <string name="change">CHANGE</string>

    <string name="percent">%</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>

    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>

    <string name="comma">.</string>

    <string name="square">x<sup><small>2</small></sup></string>
    <string name="exponentiation">x<sup><small>y</small></sup></string>
    <string name="sqrt">\u221ax</string>
    <string name="factorial">x!</string>
    <string name="hyperbola">1/x</string>
    <string name="pi">\u03C0</string>
    <string name="exp">e</string>

    <string name="mod">mod</string>
    <string name="log">log10</string>
    <string name="ln">log</string>
    <string name="bracket1">(</string>
    <string name="bracket2">)</string>

    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="deg">deg</string>
    <string name="rad">rad</string>

    <string name="error">Error</string>

</resources>