<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calcOperations"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:gravity="end"
        android:ellipsize="start"
        android:textSize="40sp"
        android:singleLine="true"
        />
    <TextView
        android:id="@+id/calcResult"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:gravity="end"
        android:ellipsize="end"
        android:textSize="50sp"
        android:singleLine="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0">

            <TextView
                android:id="@+id/squareBtn"
                style="@style/NullButton"/>
            <TextView
                android:id="@+id/angleUnitBtn"
                style="@style/NullButton"/>
            <TextView
                android:id="@+id/sinBtn"
                style="@style/NullButton"/>
            <TextView
                android:id="@+id/cosBtn"
                style="@style/NullButton"/>
            <TextView
                android:id="@+id/tanBtn"
                style="@style/NullButton"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0">

            <TextView
                android:id="@+id/modBtn"
                style="@style/NullButton"/>
            <TextView
                android:id="@+id/logBtn"
                style="@style/NullButton"/>
            <TextView
                android:id="@+id/lnBtn"
                style="@style/NullButton"/>
            <TextView
                android:id="@+id/bracket1Btn"
                style="@style/NullButton"/>
            <TextView
                android:id="@+id/bracket2Btn"
                style="@style/NullButton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/exponentiationBtn"
                style="@style/NullButton"/>

            <TextView
                android:id="@+id/acBtn"
                style="@style/ActionButton"
                android:enabled="true"
                android:text="@string/ac" />

            <TextView
                android:id="@+id/backBtn"
                style="@style/ActionButton"
                android:text="@string/del"/>
            <TextView
                android:id="@+id/percentBtn"
                style="@style/ActionButton"
                android:text="@string/percent"/>
            <TextView
                android:id="@+id/divBtn"
                style="@style/ActionButton"
                android:text="@string/div"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/sqrtBtn"
                style="@style/NullButton"/>
            <TextView
                android:id="@+id/sevenBtn"
                style="@style/NumberButton"
                android:text="@string/seven"/>
            <TextView
                android:id="@+id/eightBtn"
                style="@style/NumberButton"
                android:text="@string/eight"/>
            <TextView
                android:id="@+id/nineBtn"
                style="@style/NumberButton"
                android:text="@string/nine"/>
            <TextView
                android:id="@+id/mulBtn"
                style="@style/ActionButton"
                android:text="@string/mul"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/factorialBtn"
                style="@style/NullButton"/>
            <TextView
                android:id="@+id/fourBtn"
                style="@style/NumberButton"
                android:text="@string/four"/>
            <TextView
                android:id="@+id/fiveBtn"
                style="@style/NumberButton"
                android:text="@string/five"/>
            <TextView
                android:id="@+id/sixBtn"
                style="@style/NumberButton"
                android:text="@string/six"/>
            <TextView
                android:id="@+id/minusBtn"
                style="@style/ActionButton"
                android:text="@string/minus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/hyperbolaBtn"
                style="@style/NullButton"/>
            <TextView
                android:id="@+id/oneBtn"
                style="@style/NumberButton"
                android:text="@string/one"/>
            <TextView
                android:id="@+id/twoBtn"
                style="@style/NumberButton"
                android:text="@string/two"/>
            <TextView
                android:id="@+id/threeBtn"
                style="@style/NumberButton"
                android:text="@string/three"/>
            <TextView
                android:id="@+id/plusBtn"
                style="@style/ActionButton"
                android:text="@string/plus"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/piBtn"
                style="@style/NullButton"/>
            <TextView
                android:id="@+id/expBtn"
                style="@style/ActionButton"
                android:text="@string/exp"/>
            <TextView
                android:id="@+id/zeroBtn"
                style="@style/NumberButton"
                android:text="@string/zero"/>
            <TextView
                android:id="@+id/commaBtn"
                style="@style/ActionButton"
                android:text="@string/comma"/>
            <TextView
                android:id="@+id/equalBtn"
                style="@style/ActionButton"
                android:text="@string/equal"/>
        </LinearLayout>
    </LinearLayout>

  </LinearLayout>